refactor: StringUtils.isBlank 직접 구현